--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>About Me</title>
 </head>
 <body>
+    <img src="./i01_whatsapp-image-2021-12-08-at-3.58.58-pm.jpg" alt="image not provided">
     <h1> About Me</h1>
     <p>Name:Sai charan</p>
     <p>Location:Tanuku,Andhra pradesh</p>
@@ -49,5 +50,9 @@
         <li>FootBall</li>
         <li>Carroms</li>
     </ol>
+    <h3>
+        Favourite Website
+    </h3>
+    <a href="https://www.instagram.com/">Favourite Link</a>
 </body>
 </html>
